--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
-    "@types/styled-components": "^4.1.16",
+    "@types/styled-components": "4.1.8",
     "material-table": "^1.39.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
